# RAG_project_final

./: .gitattributes  .gitignore  README.md  giga_test.ipynb  main.py  pyproject.toml  vless_proxy.sh  word_to_pdf.ipynb
data/: 1. ТР ЕАЭС 049-2020 О требованиях к магистральным трубопроводам для транспортирования жидких и газообразных углеводородов.docx  10. Постановление Правительства № 1437 Об утверждении Положения о разработке ПМЛЛПА на ОПО.doc  15. Приказ РТН № 519 ФНИП Требования к производству сварочных работ на опасных производственных объектах.docx  16. Приказ РТН № 528 ФНИП Правила безопасного ведения газоопасных, огневых и ремонтных работ.docx  17. Приказ РТН № 533 ФНИП Общие правила взрывобезопасности.docx  18. Приказ РТН № 534 ФНИП Правила безопасности в нефтяной и газовой промышленности.docx  19. Приказ РТН № 536 ФНИП Правила промышленной безопасности при использовании оборудования, работающего под избыточным давлением.rtf  19.1 Приказ РТН № 444 ФНИП Правила промышленной безопасности при эксплуатации технологических трубопроводов.docx  2. ТР ТС 010-2011 О безопасности машин и оборудования.docx  21. Приказ РТН № 330 Руководство по безопасности Тнефтепроводов и нефтепродуктопроводов.docx  25. Приказ РТН № 784 Рекомендации по устройству и безопасной эксплуатации технологических трубопроводов.rtf  3. ТР ТС 012-2011 О безопасности оборудования для работы во взрывоопасных средах.docx  4. ТР ТС 032-2013 О безопасности оборудования, работающего под избыточным давлением.docx  5. ФЗ 69 О пожарной безопасности.docx  7. ФЗ 116 О промышленной безопасности ОПО.docx  (+16 more)
(+32 files in other folders)
