[project]
name = "norma-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "docx2txt>=0.9",
    "flask>=3.1.2",
    "gigachat>=0.1.42.post2",
    "groq>=0.31.0",
    "httpcore[socks]>=1.0.9",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.11",
    "langchain-qdrant>=0.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pikepdf>=9.10.2",
    "pip>=25.2",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "socksio>=1.0.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
]
